# 1052_wifi_ubuntu

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  readme.txt
WiFi/: make
WiFi/WICED/RTOS/FreeRTOS/WWD/: .wwd_rtos.h.swp  wwd_rtos.c  wwd_rtos.h
WiFi/WICED/RTOS/FreeRTOS/WWD/ARM_CM7/: FreeRTOSConfig.h
WiFi/WICED/RTOS/FreeRTOS/ver10.3.0/Source/: tasks.c
WiFi/WICED/RTOS/FreeRTOS/ver10.3.0/Source/include/: StackMacros.h
WiFi/WICED/WWD/include/: wwd_assert.h  wwd_debug.h
WiFi/WICED/WWD/include/network/: wwd_network_constants.h
WiFi/WICED/WWD/include/platform/: wwd_sdio_interface.h
WiFi/WICED/WWD/internal/: wwd_management.c  wwd_sdpcm.c  wwd_thread.c
WiFi/WICED/WWD/internal/bus_protocols/: wwd_bus_common.c
WiFi/WICED/WWD/internal/bus_protocols/SDIO/: wwd_bus_protocol.c  wwd_bus_protocol.h
WiFi/WICED/network/LwIP/WWD/: .wwd_network.c.swp  wwd_buffer.c  wwd_buffer2.c  wwd_network.c
WiFi/WICED/network/LwIP/WWD/FreeRTOS/: lwipopts.h  sys_arch.c
WiFi/WICED/network/LwIP/ver2.0.3/src/core/: timeouts.c
WiFi/WICED/network/LwIP/ver2.1.2/: lwipopts.h
WiFi/WICED/network/LwIP/ver2.1.2/lwip/api/: api_lib.c  api_msg.c  err.c  if_api.c  netbuf.c  netdb.c  netifapi.c  sockets.c  tcpip.c
WiFi/WICED/network/LwIP/ver2.1.2/lwip/core/: altcp.c  altcp_alloc.c  altcp_tcp.c  def.c  dns.c  inet_chksum.c  init.c  ip.c  mem.c  memp.c  netif.c  pbuf.c  raw.c  stats.c  sys.c  tcp.c  tcp_in.c  tcp_out.c  timeouts.c  udp.c
WiFi/WICED/network/LwIP/ver2.1.2/lwip/core/ipv4/: autoip.c  dhcp.c  etharp.c  icmp.c  igmp.c  ip4.c  ip4_addr.c  ip4_frag.c
WiFi/WICED/network/LwIP/ver2.1.2/lwip/core/ipv6/: dhcp6.c  ethip6.c  icmp6.c  inet6.c  ip6.c  ip6_addr.c  ip6_frag.c  mld6.c  nd6.c
WiFi/WICED/network/LwIP/ver2.1.2/lwip/include/arch/: cc.h  sys_arch.c  sys_arch.h
WiFi/WICED/network/LwIP/ver2.1.2/lwip/include/lwip/: altcp.h  altcp_tcp.h  altcp_tls.h  api.h  arch.h  autoip.h  debug.h  def.h  dhcp.h  dhcp6.h  (+41 more)
WiFi/WICED/network/LwIP/ver2.1.2/lwip/netif/: ethernet.c
WiFi/WICED/platform/ARM_CM7/: platform_isr.h
WiFi/WICED/platform/MCU/: platform_resource.c  wwd_platform_separate_mcu.c
WiFi/WICED/platform/MCU/iMXRT10xx/WWD/: wlan_bus_sdio.c
WiFi/WICED/platform/include/: platform_init.h  platform_peripheral.h
WiFi/apps/snip/graphics/uguitest/resources/: convert_img.pl
WiFi/apps/test/nsh/: nsh.mk
WiFi/include/: wiced_defaults.h  wiced_rtos.h  wiced_utilities.h
WiFi/libraries/drivers/bluetooth/BTE/WICED/: data_types.h
WiFi/libraries/drivers/bluetooth/dual_mode/: dual_mode.mk
WiFi/libraries/drivers/bluetooth/firmware/20706A2/40MHz/: bt_firmware_embedded_mesh_gateway_proxy.c
WiFi/libraries/drivers/bluetooth/include/: wiced_bt_ble.h  wiced_bt_gatt.h  wiced_bt_rfcomm.h  wiced_bt_sco.h
WiFi/libraries/drivers/bluetooth/low_energy/: low_energy.mk
WiFi/libraries/drivers/bluetooth/wiced_hci_bt/: wiced_hci_bt_gatt.c  wiced_hci_bt_mesh.c
WiFi/libraries/graphics/u8g/: u8g_dev_ssd1351_128x128.c  u8g_dev_uc1608_240x128.c
WiFi/libraries/protocols/MQTT/: mqtt_connection.h
WiFi/libraries/test/wl_tool/: wlu_client.c
WiFi/libraries/test/wl_tool/43340B0/include/: epictrl.h  irelay.h
WiFi/libraries/test/wl_tool/43340B0/wl/exe/: wlu.c  wlu.h  wlu_cmd.h  wlu_common.c  wlu_common.h  wlu_iov.c  wlu_remote.h
WiFi/libraries/test/wl_tool/43341B0/wl/exe/: wlm.c  wlm.h  wlu.c  wlu.h  wlu_cmd.c  wlu_linux.c
WiFi/libraries/test/wl_tool/43362A2/include/: epictrl.h  irelay.h
WiFi/libraries/test/wl_tool/43362A2/wl/exe/: wlm.c  wlm.h  wlu.c  wlu.h  wlu_cmd.c  wlu_cmd.h  wlu_iov.c  wlu_linux.c
WiFi/libraries/test/wl_tool/43364A1/include/: epiioctl.h
WiFi/libraries/test/wl_tool/43364A1/wl/exe/: wlm.c  wlm.h  wlu.c  wlu.h  wlu_cmd.h  wlu_common.c  wlu_common.h  wlu_pipe.c  wlu_pipe.h  wlu_pipe_win32.c  wlu_rates_matrix.c  wlu_remote.h  wlu_server_shared.c  wlu_server_shared.h
WiFi/libraries/test/wl_tool/43438A1/include/: epictrl.h  epiioctl.h  irelay.h
WiFi/libraries/test/wl_tool/43438A1/wl/exe/: wlm.c  wlu.c  wlu.h  wlu_cmd.c  wlu_cmd.h  wlu_iov.c  wlu_linux.c
WiFi/libraries/test/wl_tool/4343WA1/include/: epictrl.h  irelay.h
WiFi/libraries/test/wl_tool/4343WA1/wl/exe/: wlu.c  wlu_common.h  wlu_iov.c  wlu_linux.c  wlu_pipe.c  wlu_pipe_linux.c  wlu_rates_matrix.c  wlu_rates_matrix.h  wlu_remote.h  wlu_server_shared.c
WiFi/libraries/test/wl_tool/43455C0/wl/exe/: wlu.c  wlu_server_shared.c
WiFi/libraries/test/wl_tool/43909B0/include/: epictrl.h  irelay.h
WiFi/libraries/test/wl_tool/43909B0/wl/exe/: wlm.c  wlm.h  wlu.c  wlu.h  wlu_cmd.c  wlu_cmd.h  wlu_common.c  wlu_common.h  wlu_iov.c  wlu_linux.c
WiFi/resources/firmware/43362/: 43362A2_bin_1.c
doc/lwip/port/: ethernetif.c
doc/lwip/src/core/: memp.c
doc/lwip/src/include/lwip/: opt.h  pbuf.h
libraries2/lib/drivers/: fsl_usdhc.c
libraries2/lib/sdmmc/inc/: fsl_sdio.h
libraries2/lib/sdmmc/src/: fsl_sdio.c
libraries2/lib/utilities/: fsl_debug_console.c  fsl_debug_console.h
my/: dhcp.c  imp_need.c  scan.c  tcpecho.c
user/: board.c  board.h  main.c  pin_mux.c
user/bsp/led/: bsp_led.c  bsp_led.h
user/bsp/sdio/: ChangeLogKSDK.txt
user/bsp/sdio/doxygen/: card.dox  sdspi.dox
user/bsp/sdio/inc/: fsl_sdio.h  fsl_sdmmc_common.h  fsl_sdmmc_host.h  fsl_sdmmc_spec.h
user/bsp/sdio/port/: fsl_sdmmc_event.h
user/bsp/sdio/port/usdhc/freertos/: fsl_sdmmc_event.c  fsl_sdmmc_host.c
user/bsp/sdio/port/usdhc/interrupt/: fsl_sdmmc_event.c  fsl_sdmmc_host.c
user/bsp/sdio/port/usdhc/polling/: fsl_sdmmc_event.c  fsl_sdmmc_host.c
user/bsp/sdio/src/: fsl_sdio.c  fsl_sdmmc_common.c
user/speedtest/: netio.c
(+125 files in other folders)
